@@ -1,3 +1,5 @@
+2011-07-30: eidors_msg will print the calling function automatically
+2011-07-30: eidors_cache can clean up named parts of the cache
 2011-07-30: Function defaults
 	    Models now use 'eidors_default' instead of a particular solver.
 	    Defaults are set in eidors_startup.
